Add methods and plist property to save edited images into the photo library

--- a/Project13_instafilter/Project13_instafilter/Info.plist
+++ b/Project13_instafilter/Project13_instafilter/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To import and edit photos from your library</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To save the edited photos in your library</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
