--- a/Project22-Beacon/Project22-Beacon/Info.plist
+++ b/Project22-Beacon/Project22-Beacon/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We want to help you find tour nearest stores</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We want to help you find tour nearest stores</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
