update UI based on beacon proximity

--- a/Project22-Beacon/Project22-Beacon/Info.plist
+++ b/Project22-Beacon/Project22-Beacon/Info.plist
@@ -6,6 +6,8 @@
 	<string>We want to help you find tour nearest stores</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We want to help you find tour nearest stores</string>
+	<key>Bundle identifier</key>
+	<string></string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
