--- a/Project25-SelfieShare/Project25-SelfieShare/Info.plist
+++ b/Project25-SelfieShare/Project25-SelfieShare/Info.plist
@@ -2,11 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Privacy Local Network Usage Description</key>
+	<key>NSLocalNetworkUsageDescription</key>
 	<string>We need access to your local network to communicate with other devices</string>
 	<key>NSBonjourServices</key>
 	<array>
-		<string> _hws-project25._tcp</string>
+		<string>_hws-project25._tcp</string>
 		<string>_hws-project25._udp</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
