--- a/Project10_collectionview/Project10_collectionview/Info.plist
+++ b/Project10_collectionview/Project10_collectionview/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSCameraUsageDescription</key>
 	<string>To import your photos in our app</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>We need authentification to open access to your photos</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
